# wg_gaming_installer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  install.py  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  wg-gaming-installer.sh  wg-pi-installer.sh
.github/workflows/: shellcheck.yml
templates/: add-fullcone-nat.sh  rm-fullcone-nat.sh
wg_gaming_installer/: exec_scripts.py  install.py  install_scripts.py  prompt_scripts.py  shell_scripts.py  sqlite_scripts.py  wg_start.py  wg_stop.py
