[metadata]
name = wg_gaming_installer
version = 0.1.0
description = Small installer/manager for WireGuard server and clients (Python)
long_description = file: README.md
long_description_content_type = text/markdown
author = xiahualiu
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.10
install_requires =
    psutil>=5.9
    prompt_toolkit>=3.0
    distro>=1.8
include_package_data = True
